syntax = "proto3";

package db;

option go_package = "./db";

service database {
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Remove (RemoveRequest) returns (RemoveResponse) {}
    rpc Update (UpdateRequest) returns (UpdateResponse) {}
    rpc Add (AddRequest) returns (AddResponse) {}
    rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusResponse) {}
}

message Document {
    string content = 1;
    string title = 2;
    string author = 3;
    string topic = 4;
    string watermark = 5;
}

message GetRequest {
    message Filters {
        string key = 1;
        string value = 2;
    }
    repeated Filters filters = 1;
}

message GetResponse {
    repeated Document documents = 1;
    string err = 2;
}

message UpdateRequest {
    string ticketID = 1;
    Document document = 2;
}

message UpdateResponse {
    int64 code = 1;
    string err = 2;
}

message RemoveRequest {
    string ticketID = 1;
}

message RemoveResponse {
    int64 code = 1;
    string err = 2;
}

message AddRequest {
    Document document = 1;
}

message AddResponse {
    string ticketID = 1;
    string err = 2;
}

message ServiceStatusRequest {}

message ServiceStatusResponse {
    int64 code = 1;
    string err = 2;
}